virtualbox-ose (1.6.6-dfsg-1) UNRELEASED; urgency=low

  [ Michael Meskes ]
  * New upstream version.
  * Updated initscript to better handle LSB compatibility, yet again closes: #474089
  * Removed patch 05-vboxadd-udev which was applied by upstream.

  [ Loic Minier ]
  * Demote module-assistant deps to Recommends; closes: #495671.

 -- Michael Meskes <meskes@debian.org>  Sat, 09 Aug 2008 21:46:44 +0200

virtualbox-ose (1.6.2-dfsg-4) unstable; urgency=medium

  * Adding patch from Gonéri Le Bouder <goneri@rulezlan.org> to fix FTBFS with
    dash as /bin/sh (Closes: #493402).
  * Adding patch from Gonéri Le Bouder <goneri@rulezlan.org> to fix FTBFS with
    LC_ALL set to fr_FR.UTF-8 (Closes: #494157).
  * Adding Swedish debconf translation from Martin Ågren
    <martin.agren@gmail.com> (Closes: #492162).

 -- Daniel Baumann <daniel@debian.org>  Thu,  7 Aug 2008 11:38:00 -0300

virtualbox-ose (1.6.2-dfsg-3) unstable; urgency=medium

  [ Daniel Baumann ]
  * Removing empty lines at EOF and whitespaces at EOL.
  * Including vboxvideo.ids in virtualbox-ose-guest-utils to allow xserver to
    automagically detect the display adapter, thanks to Avi Rozen
    <avi.rozen@gmail.com> (Closes: #490541).
  * Adding Turkish debconf translation from Mert Dirik <mertdirik@gmail.com>
    (Closes: #490725).

  [ Loic Minier ]
  * Drop useless subshells in rules files and export environment vars
    explicitely; also change "cd foo; $(MAKE)" patterns to "$(MAKE) -C foo".

 -- Daniel Baumann <daniel@debian.org>  Mon, 14 Jul 2008 07:14:00 +0200

virtualbox-ose (1.6.2-dfsg-2) unstable; urgency=low

  [ Daniel Baumann ]
  * Using dpkg-architecture rather than dpkg --print-architecture in
    01-no-64bit-guest.dpatch in order to be more accurate for ia32 subarchs
    like lpia, thanks to Loic Minier <lool@debian.org>.
  * Rediffing 02-config-kmk.dpatch.
  * Adding patch to adjust failure message with Debian specific solution when
    experiencing kernel module version mismatch.
